-changed port number to 9999 -added constants in constants.java -added constants in GameRequestTable.java -created RequestOpponentData.java and ResponseOpponent.java -added player data in RequestHeartbeat.java

--- a/SpeedServer/conf/gameServer.conf
+++ b/SpeedServer/conf/gameServer.conf
@@ -1,2 +1,3 @@
 #This is the configuration file for the game server. 
-portNumber 9252
+#changed to 9999 because other teams might use the same port
+portNumber 9999
