--- a/SpeedServer/nbproject/project.properties
+++ b/SpeedServer/nbproject/project.properties
@@ -79,7 +79,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=core.GameServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
