--- a/SpeedServer/nbproject/private/private.properties
+++ b/SpeedServer/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Dong\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Sbc-ComEx\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
