--- a/WoB_Client_Basic/Assembly-CSharp.csproj
+++ b/WoB_Client_Basic/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Login.cs" />
+     <Compile Include="Assets\Main.cs" />
      <Compile Include="Assets\Network\ConnectionManager.cs" />
      <Compile Include="Assets\Network\DataReader.cs" />
      <Compile Include="Assets\Network\GamePacket.cs" />
@@ -63,6 +65,8 @@
      <Compile Include="Assets\Network\Response\ResponseLogin.cs" />
      <Compile Include="Assets\Scripts\Constants.cs" />
      <Compile Include="Assets\Scripts\ExtendedEventArgs.cs" />
+     <Compile Include="Assets\Scripts\Login.cs" />
+     <Compile Include="Assets\Scripts\Main.cs" />
      <Compile Include="Assets\Scripts\MessageQueue.cs" />
      <Compile Include="Assets\Scripts\ReadyScene\ButtonLogic.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\GameCamera.cs" />
