--- a/WoB_Client_Basic/Assembly-CSharp.csproj
+++ b/WoB_Client_Basic/Assembly-CSharp.csproj
@@ -60,15 +60,17 @@
      <Compile Include="Assets\Scripts\Constants.cs" />
      <Compile Include="Assets\Scripts\ExtendedEventArgs.cs" />
      <Compile Include="Assets\Scripts\MessageQueue.cs" />
-     <Compile Include="Assets\Scripts\ReadyScene\ButtonLogic.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\GameCamera.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\PlatformActions\ElevatorPlatform.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\PlatformActions\SpinPlatform.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerPhysics.cs" />
+     <Compile Include="Assets\Scripts\RunnerScene Scripts\ReadyScene\ButtonLogic.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\Running.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingGameManager.cs" />
+     <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingPlayerController.cs" />
+     <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingPlayerPhysics.cs" />
      <Compile Include="Assets\Scripts\SelectionScene\SelectionManager.cs" />
      <Compile Include="Assets\Scripts\SpeciesData.cs" />
      <Compile Include="Assets\Scripts\SpeciesTable.cs" />
