--- a/WoB_Client_Basic/Assembly-CSharp-vs.csproj
+++ b/WoB_Client_Basic/Assembly-CSharp-vs.csproj
@@ -57,10 +57,12 @@
      <Compile Include="Assets\Network\Request\RequestHeartbeat.cs" />
      <Compile Include="Assets\Network\Request\RequestInGameHeartbeat.cs" />
      <Compile Include="Assets\Network\Request\RequestLogin.cs" />
+     <Compile Include="Assets\Network\Request\RequestRaceInit.cs" />
      <Compile Include="Assets\Network\Response\NetworkResponse.cs" />
      <Compile Include="Assets\Network\Response\ResponseGameState.cs" />
      <Compile Include="Assets\Network\Response\ResponseHeartbeat.cs" />
      <Compile Include="Assets\Network\Response\ResponseLogin.cs" />
+     <Compile Include="Assets\Network\Response\ResponseRaceInit.cs" />
      <Compile Include="Assets\Scripts\Constants.cs" />
      <Compile Include="Assets\Scripts\ExtendedEventArgs.cs" />
      <Compile Include="Assets\Scripts\Login.cs" />
