Initial commit on branch database (adds + mods).
Initial commit on branch database.
Committed by Joseph Fernandez; 2015-05-08, 2:38 AM.

All additions and modifications are in SpeedServer folder.

Modifications:
- conf/db.conf - DB login credentials changed to access thecity DB.
- dataAccessLayer/RaceDAO.java - Still incomplete; added some basic, preliminary code.

Additions:
- dataAccessLayer folder
  - RunnerItemsDAO.java
  - RunnerSpeciesDAO.java
  - TestDBConnection.java - overly simplistic, only tests connection to DB
- model
  - RunnerItems.java
  - RunnerSpecies.java

Questionable additions (all in networking)?
(Weren't these present from the master before this
branch?)
- request/RRRequestPosition.java
- response/RRResponsePosition.java
- response/ResponseOpponentData.java

--- a/SpeedServer/conf/db.conf
+++ b/SpeedServer/conf/db.conf
@@ -1,13 +1,13 @@
 #This is the configuration file for the database of this game server.
 
 #Database URL
-DBURL localhost
+DBURL thecity.sfsu.edu
 
 #Database name
-DBName wob_basic_db
+DBName csc63101
 
 #Database user name
-DBUsername root
+DBUsername csc63101
 
 #Database user password
-DBPassword root
+DBPassword csc631_01
