--- a/WoB_Client_Basic/Assembly-CSharp-vs.csproj
+++ b/WoB_Client_Basic/Assembly-CSharp-vs.csproj
@@ -1,113 +1,114 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-	<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-	<ProductVersion>10.0.20506</ProductVersion>
-	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{A378230A-C757-1005-485D-DCD0BA49E32A}</ProjectGuid>
-	<OutputType>Library</OutputType>
-	<AppDesignerFolder>Properties</AppDesignerFolder>
-	<RootNamespace></RootNamespace>
-	<AssemblyName>Assembly-CSharp</AssemblyName>
-	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-	<FileAlignment>512</FileAlignment>
-	<BaseDirectory>Assets</BaseDirectory>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProductVersion>10.0.20506</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{A378230A-C757-1005-485D-DCD0BA49E32A}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>
+    </RootNamespace>
+    <AssemblyName>Assembly-CSharp</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <BaseDirectory>Assets</BaseDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-	<DebugSymbols>true</DebugSymbols>
-	<DebugType>full</DebugType>
-	<Optimize>false</Optimize>
-	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_4_6_4;UNITY_4_6;UNITY_STANDALONE_OSX;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_UNITYEVENTS;ENABLE_NEW_HIERARCHY ;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_TERRAIN;ENABLE_SUBSTANCE;ENABLE_GENERICS;INCLUDE_IL2CPP;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_4_6_FEATURES;INCLUDE_WP_BLUE_SUPPORT;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;UNITY5_SCRIPTING_IN_UNITY4;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_GAMECENTER;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_MONO;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN</DefineConstants>
-	<ErrorReport>prompt</ErrorReport>
-	<WarningLevel>4</WarningLevel>
-	<NoWarn>0169</NoWarn>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>Temp\bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;UNITY_4_6_4;UNITY_4_6;UNITY_STANDALONE_OSX;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_UNITYEVENTS;ENABLE_NEW_HIERARCHY ;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_TERRAIN;ENABLE_SUBSTANCE;ENABLE_GENERICS;INCLUDE_IL2CPP;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_4_6_FEATURES;INCLUDE_WP_BLUE_SUPPORT;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;UNITY5_SCRIPTING_IN_UNITY4;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_GAMECENTER;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_MONO;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <NoWarn>0169</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-	<DebugType>pdbonly</DebugType>
-	<Optimize>true</Optimize>
-	<OutputPath>Temp\bin\Release\</OutputPath>
-	<DefineConstants>TRACE</DefineConstants>
-	<ErrorReport>prompt</ErrorReport>
-	<WarningLevel>4</WarningLevel>
-	<NoWarn>0169</NoWarn>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>Temp\bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <NoWarn>0169</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-	<Reference Include="System" />
+    <Reference Include="System" />
     <Reference Include="System.XML" />
-	<Reference Include="System.Core" />
-	<Reference Include="System.Xml.Linq" />
-	<Reference Include="UnityEngine">
-	  <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
-	</Reference>
-	<Reference Include="UnityEditor">
-	  <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
-	</Reference>
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="UnityEngine">
+      <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor">
+      <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Network\ConnectionManager.cs" />
-     <Compile Include="Assets\Network\DataReader.cs" />
-     <Compile Include="Assets\Network\GamePacket.cs" />
-     <Compile Include="Assets\Network\GamePacketStream.cs" />
-     <Compile Include="Assets\Network\NetworkRequestTable.cs" />
-     <Compile Include="Assets\Network\NetworkResponseTable.cs" />
-     <Compile Include="Assets\Network\Request\NetworkRequest.cs" />
-     <Compile Include="Assets\Network\Request\RRRequestSpecies.cs" />
-     <Compile Include="Assets\Network\Request\RequestGameState.cs" />
-     <Compile Include="Assets\Network\Request\RequestHeartbeat.cs" />
-     <Compile Include="Assets\Network\Request\RequestInGameHeartbeat.cs" />
-     <Compile Include="Assets\Network\Request\RequestKeyboard.cs" />
-     <Compile Include="Assets\Network\Request\RequestLogin.cs" />
-     <Compile Include="Assets\Network\Request\RequestRRPostion.cs" />
-     <Compile Include="Assets\Network\Request\RequestRRSpecies.cs" />
-     <Compile Include="Assets\Network\Request\RequestRRStartGame.cs" />
-     <Compile Include="Assets\Network\Request\RequestRaceInit.cs" />
-     <Compile Include="Assets\Network\Response\NetworkResponse.cs" />
-     <Compile Include="Assets\Network\Response\RRResponseSpecies.cs" />
-     <Compile Include="Assets\Network\Response\ResponseGameState.cs" />
-     <Compile Include="Assets\Network\Response\ResponseHeartbeat.cs" />
-     <Compile Include="Assets\Network\Response\ResponseKeyboard.cs" />
-     <Compile Include="Assets\Network\Response\ResponseLogin.cs" />
-     <Compile Include="Assets\Network\Response\ResponseRRPostion.cs" />
-     <Compile Include="Assets\Network\Response\ResponseRRSpecies.cs" />
-     <Compile Include="Assets\Network\Response\ResponseRRStartGame.cs" />
-     <Compile Include="Assets\Network\Response\ResponseRaceInit.cs" />
-     <Compile Include="Assets\Scripts\Constants.cs" />
-     <Compile Include="Assets\Scripts\CountdownScene\CountdownManager.cs" />
-     <Compile Include="Assets\Scripts\EndScene\EndGameManager.cs" />
-     <Compile Include="Assets\Scripts\ExtendedEventArgs.cs" />
-     <Compile Include="Assets\Scripts\Login.cs" />
-     <Compile Include="Assets\Scripts\Main.cs" />
-     <Compile Include="Assets\Scripts\MessageQueue.cs" />
-     <Compile Include="Assets\Scripts\ReadyScene\RacePrep.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\GameCamera.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\GameManager.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\ItemController.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\ItemReader.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\PlatformActions\ElevatorPlatform.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\PlatformActions\SpinPlatform.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\Player.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerController.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerController2.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerPhysics.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\ReadyScene\ButtonLogic.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\Running.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingGameManager.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingPlayerController.cs" />
-     <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingPlayerPhysics.cs" />
-     <Compile Include="Assets\Scripts\SelectionScene\SelectionManager.cs" />
-     <Compile Include="Assets\Scripts\SpeciesData.cs" />
-     <Compile Include="Assets\Scripts\SpeciesTable.cs" />
-     <None Include="Assets\Resources\Prefabs\map\ItemLocationFiles\1.txt" />
-     <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
-     <None Include="Assets\SpritePack1\!Readme.txt" />
- <Reference Include="UnityEngine.UI">
- <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.4/UnityEngine.UI.dll</HintPath>
- </Reference>
- <Reference Include="Mono.Data.Sqlite">
- <HintPath>D:/Documents/School/Spring2015/Computer Science/631/FromGit/CSC631-831NewIdea2/WoB_Client_Basic/Assets/Plugins/Mono.Data.Sqlite.dll</HintPath>
- </Reference>
+    <Compile Include="Assets\Network\ConnectionManager.cs" />
+    <Compile Include="Assets\Network\DataReader.cs" />
+    <Compile Include="Assets\Network\GamePacket.cs" />
+    <Compile Include="Assets\Network\GamePacketStream.cs" />
+    <Compile Include="Assets\Network\NetworkRequestTable.cs" />
+    <Compile Include="Assets\Network\NetworkResponseTable.cs" />
+    <Compile Include="Assets\Network\Request\NetworkRequest.cs" />
+    <Compile Include="Assets\Network\Request\RRRequestSpecies.cs" />
+    <Compile Include="Assets\Network\Request\RequestGameState.cs" />
+    <Compile Include="Assets\Network\Request\RequestHeartbeat.cs" />
+    <Compile Include="Assets\Network\Request\RequestInGameHeartbeat.cs" />
+    <Compile Include="Assets\Network\Request\RequestKeyboard.cs" />
+    <Compile Include="Assets\Network\Request\RequestLogin.cs" />
+    <Compile Include="Assets\Network\Request\RequestRRPostion.cs" />
+    <Compile Include="Assets\Network\Request\RequestRRSpecies.cs" />
+    <Compile Include="Assets\Network\Request\RequestRRStartGame.cs" />
+    <Compile Include="Assets\Network\Request\RequestRaceInit.cs" />
+    <Compile Include="Assets\Network\Response\NetworkResponse.cs" />
+    <Compile Include="Assets\Network\Response\RRResponseSpecies.cs" />
+    <Compile Include="Assets\Network\Response\ResponseGameState.cs" />
+    <Compile Include="Assets\Network\Response\ResponseHeartbeat.cs" />
+    <Compile Include="Assets\Network\Response\ResponseKeyboard.cs" />
+    <Compile Include="Assets\Network\Response\ResponseLogin.cs" />
+    <Compile Include="Assets\Network\Response\ResponseRRPostion.cs" />
+    <Compile Include="Assets\Network\Response\ResponseRRSpecies.cs" />
+    <Compile Include="Assets\Network\Response\ResponseRRStartGame.cs" />
+    <Compile Include="Assets\Network\Response\ResponseRaceInit.cs" />
+    <Compile Include="Assets\Scripts\Constants.cs" />
+    <Compile Include="Assets\Scripts\CountdownScene\CountdownManager.cs" />
+    <Compile Include="Assets\Scripts\EndScene\EndGameManager.cs" />
+    <Compile Include="Assets\Scripts\ExtendedEventArgs.cs" />
+    <Compile Include="Assets\Scripts\Login.cs" />
+    <Compile Include="Assets\Scripts\Main.cs" />
+    <Compile Include="Assets\Scripts\MessageQueue.cs" />
+    <Compile Include="Assets\Scripts\ReadyScene\RacePrep.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\GameCamera.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\ItemController.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\ItemReader.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\PlatformActions\ElevatorPlatform.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\PlatformActions\SpinPlatform.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerController2.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerPhysics.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\ReadyScene\ButtonLogic.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\Running.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingGameManager.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingPlayerController.cs" />
+    <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingPlayerPhysics.cs" />
+    <Compile Include="Assets\Scripts\SelectionScene\SelectionManager.cs" />
+    <Compile Include="Assets\Scripts\SpeciesData.cs" />
+    <Compile Include="Assets\Scripts\SpeciesTable.cs" />
+    <None Include="Assets\Resources\Prefabs\map\ItemLocationFiles\1.txt" />
+    <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
+    <None Include="Assets\SpritePack1\!Readme.txt" />
+    <Reference Include="UnityEngine.UI">
+      <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.4/UnityEngine.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Data.Sqlite">
+      <HintPath>D:/Documents/School/Spring2015/Computer Science/631/FromGit/CSC631-831NewIdea2/WoB_Client_Basic/Assets/Plugins/Mono.Data.Sqlite.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -117,5 +118,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  
 </Project>
