--- a/SpeedServer/nbproject/project.properties
+++ b/SpeedServer/nbproject/project.properties
@@ -43,7 +43,9 @@ file.reference.mail.jar=lib/mail.jar
 file.reference.mysql-connector-java-5.1.22-bin.jar=lib/mysql-connector-java-5.1.22-bin.jar
 file.reference.saaj.jar=lib/saaj.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.activation.jar}:\
     ${file.reference.axis.jar}:\
@@ -81,7 +83,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=core.GameServer
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
