Hard merge Aubrey's code to master
Now all three version are integrated. Please use master as the base of
your [delete]future[/delete] [delete]next[/delete] rest of work (which
should be finished by today...)

Still have something to fix. I will take care of them. --geng

--- a/WoB_Client_Basic/Assembly-CSharp-vs.csproj
+++ b/WoB_Client_Basic/Assembly-CSharp-vs.csproj
@@ -94,6 +94,7 @@
      <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerController2.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\PlayerPhysics.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\ReadyScene\ButtonLogic.cs" />
+     <Compile Include="Assets\Scripts\RunnerScene Scripts\RunnerUI.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\Running.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingGameManager.cs" />
      <Compile Include="Assets\Scripts\RunnerScene Scripts\TestingPlayerController.cs" />
